Added cleaning for the 02450.txt file into first draft notebook.ipynb

--- a/first draft notebook.ipynb
+++ b/first draft notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -10,11 +10,11 @@
    "source": [
     "from transformers import AutoTokenizer, AutoModel, pipeline\n",
     "import torch\n",
+    "import torch._utils\n",
     "\n",
     "#for not seing a warning message\n",
     "import logging\n",
     "logging.getLogger(\"transformers.modeling_utils\").setLevel(logging.ERROR)\n",
-    "\n",
     "\n",
     "\n",
     "def get_text_embedding(text, model_name='bert-base-uncased'):\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "query=\"Did the Greeks and the Romans have universities?\""
@@ -73,78 +73,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Downloading (…)okenizer_config.json:   0%|          | 0.00/28.0 [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "be82199561ed4fb98fda2137a070c9e0"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\lasse\\Desktop\\4. semester\\Fagprojekt\\venv\\lib\\site-packages\\huggingface_hub\\file_download.py:129: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\lasse\\.cache\\huggingface\\hub. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
-      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to see activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
-      "  warnings.warn(message)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "Downloading (…)lve/main/config.json:   0%|          | 0.00/570 [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "b14311b0f30442c29a3c966235cc7dfc"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Downloading (…)solve/main/vocab.txt:   0%|          | 0.00/232k [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "79cd0f4ca26f40f69dbc549b93f8c59d"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Downloading (…)/main/tokenizer.json:   0%|          | 0.00/466k [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "760bc10ca4884f1d89525a3e4e47bc0c"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Downloading (…)\"pytorch_model.bin\";:   0%|          | 0.00/440M [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "8aae695279b64ac28da11b6ab2171852"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": 13,
+   "outputs": [],
    "source": [
     "#Open example text file\n",
     "path=\"Documents/\"\n",
@@ -169,7 +99,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "path = 'Documents/02450_w_form.txt'\n",
+    "with open(path, \"r\", encoding='utf-8') as file:\n",
+    "    input_text = file.read()\n",
+    "\n",
+    "#split into paragraphs\n",
+    "paragraphs = input_text.split(\"\\n\\n\")\n",
+    "paragraphs = [p for p in paragraphs if len(p) > 100]\n",
+    "#Remove \\n and \\t and -  from paragraphs:\n",
+    "paragraphs = [p.replace(\"\\n\", \" \") for p in paragraphs]\n",
+    "paragraphs = [p.replace(\"\\t\", \" \") for p in paragraphs]\n",
+    "paragraphs = [p.replace(\"- \", \" \") for p in paragraphs]\n",
+    "#Get embeddings of paragraphs and query\n",
+    "embeddings = [get_text_embedding(paragraph) for paragraph in paragraphs]\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open(\"emb_02450\", \"wb\") as fp:   #Pickling\n",
+    "pickle.dump(embeddings, fp)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open(\"emb_02450\", \"rb\") as fp:\n",
+    "embeddings_02450 = pickle.load(fp)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "query_embedding = get_text_embedding(query)\n",
+    "\n",
+    "#Get top k similar paragraphs and cosine distance score\n",
+    "similar_paragraphs = get_similar_paragraphs(query_embedding, embeddings,paragraphs, k=5)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
@@ -192,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -201,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "from transformers import pipeline"
@@ -212,81 +208,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Downloading (…)lve/main/config.json:   0%|          | 0.00/571 [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "1acfd9dce7e84669be924240bc94e8db"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Downloading (…)\"pytorch_model.bin\";:   0%|          | 0.00/496M [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "ba67d6a6940648b78a69399d0d915e1a"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Downloading (…)okenizer_config.json:   0%|          | 0.00/79.0 [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "164c480678dd41d0936517e2341927a5"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Downloading (…)olve/main/vocab.json:   0%|          | 0.00/899k [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "53421579c72b43798a58082970efd46f"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Downloading (…)olve/main/merges.txt:   0%|          | 0.00/456k [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "57b9476a8a124675981f078a4575ea41"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Downloading (…)cial_tokens_map.json:   0%|          | 0.00/772 [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "cbad87af214c4ec39095af1ba14b7c55"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": 16,
+   "outputs": [],
    "source": [
     "oracle = pipeline(model=\"deepset/roberta-base-squad2\", tokenizer=\"deepset/roberta-base-squad2\")\n",
     "Bert_topK = oracle(query, top_answers, top_k=5)"
@@ -297,13 +220,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "outputs": [
     {
      "data": {
-      "text/plain": "[{'score': 0.26762381196022034,\n  'start': 109,\n  'end': 179,\n  'answer': 'The Greeks and the Romans, strange as it may seem, had no universities'},\n {'score': 0.2206006497144699,\n  'start': 164,\n  'end': 179,\n  'answer': 'no universities'},\n {'score': 0.14598335325717926,\n  'start': 160,\n  'end': 179,\n  'answer': 'had no universities'},\n {'score': 0.07087451964616776,\n  'start': 109,\n  'end': 166,\n  'answer': 'The Greeks and the Romans, strange as it may seem, had no'},\n {'score': 0.05842142552137375, 'start': 164, 'end': 166, 'answer': 'no'}]"
+      "text/plain": "[{'score': 0.26762357354164124,\n  'start': 109,\n  'end': 179,\n  'answer': 'The Greeks and the Romans, strange as it may seem, had no universities'},\n {'score': 0.2206004559993744,\n  'start': 164,\n  'end': 179,\n  'answer': 'no universities'},\n {'score': 0.14598329365253448,\n  'start': 160,\n  'end': 179,\n  'answer': 'had no universities'},\n {'score': 0.07087451219558716,\n  'start': 109,\n  'end': 166,\n  'answer': 'The Greeks and the Romans, strange as it may seem, had no'},\n {'score': 0.05842142552137375, 'start': 164, 'end': 166, 'answer': 'no'}]"
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "prompt=f\"You are a friendly and helpful chatbot. your job is to give a short and relevant answer to a given question, based on a specific background context. The context is: '{top_answers}'. Please give a relevant answer to the following question. Question: {query}. Answer: {Bert_topK[0]['answer']}\"\n",
@@ -341,7 +264,7 @@
     },
     {
      "data": {
-      "text/plain": "[{'generated_text': \"You are a friendly and helpful chatbot. your job is to give a short and relevant answer to a given question, based on a specific background context. The context is: 'I\\nTHE EARLIEST UNIVERSITIES\\nUniversities, like cathedrals and parliaments, are a product of the Middle Ages. The Greeks and the Romans, strange as it may seem, had no universities in the sense in which the word has been used for the past seven or eight centuries. They had higher education, but the terms are not synonymous. Much of their instruction in law, rhetoric, and philosophy it would be hard to surpass, but it was not organized into the form of permanent institutions of learning. A great teacher like Socrates gave no diplomas; if a modern student sat at his feet for three months, he would demand a certificate,[4] something tangible and external to show for it—an excellent theme, by the way, for a Socratic dialogue. Only in the twelfth and thirteenth centuries do there emerge in the world those features of organized education with which we are most familiar, all that machinery of instruction represented by faculties and colleges and courses of study, examinations and commencements and academic degrees. In all these matters we are the heirs and successors, not of Athens and Alexandria, but of Paris and Bologna.'. Please give a relevant answer to the following question. Question: Did the Greeks and the Romans have universities?. Answer: The Greeks and the Romans, strange as it may seem, had no universities in the sense in which the word has been used for the past seven or eight centuries. They had higher education, but the terms are not synonymous. Much of their instruction in law, rhetoric, and philosophy it would be hard to surpass, but it was not organized into the form of permanent institutions of learning. A great teacher like Socrates gave no diplomas; if a modern student sat at his feet for three months, he would demand a\"}]"
+      "text/plain": "[{'generated_text': \"You are a friendly and helpful chatbot. your job is to give a short and relevant answer to a given question, based on a specific background context. The context is: 'I\\nTHE EARLIEST UNIVERSITIES\\nUniversities, like cathedrals and parliaments, are a product of the Middle Ages. The Greeks and the Romans, strange as it may seem, had no universities in the sense in which the word has been used for the past seven or eight centuries. They had higher education, but the terms are not synonymous. Much of their instruction in law, rhetoric, and philosophy it would be hard to surpass, but it was not organized into the form of permanent institutions of learning. A great teacher like Socrates gave no diplomas; if a modern student sat at his feet for three months, he would demand a certificate,[4] something tangible and external to show for it—an excellent theme, by the way, for a Socratic dialogue. Only in the twelfth and thirteenth centuries do there emerge in the world those features of organized education with which we are most familiar, all that machinery of instruction represented by faculties and colleges and courses of study, examinations and commencements and academic degrees. In all these matters we are the heirs and successors, not of Athens and Alexandria, but of Paris and Bologna.'. Please give a relevant answer to the following question. Question: Did the Greeks and the Romans have universities?. Answer: The Greeks and the Romans, strange as it may seem, had no universities in the sense in which the word has been used for the past seven or eight centuries. Not one. There can be no doubt that Socrates studied at Athens and that it was at the university that he got his first and not at the common schools. If Plato had been living in the third century B.C.; if Aristotle's work had been written at the beginning of the seventh, then at Athens, and not at Rhodes, did Pyth\"}]"
      },
      "execution_count": 19,
      "metadata": {},
@@ -359,8 +282,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 20,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
    "source": [],
    "metadata": {
     "collapsed": false
