Working cosine similarity network

--- a/Similarity network.ipynb
+++ b/Similarity network.ipynb
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 397,
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
@@ -977,7 +977,7 @@
     "\n",
     "class WeightedCos(tf.keras.layers.Layer):\n",
     "\n",
-    "    def __init__(self, units = 2, activation=None):\n",
+    "    def __init__(self, units = 128, activation=None):\n",
     "        '''Initializes the class and sets up the internal variables'''\n",
     "\n",
     "        super(WeightedCos, self).__init__()\n",
@@ -986,10 +986,10 @@
     "\n",
     "    def build(self, input_shape):\n",
     "        '''Create the state of the layer (weights)'''\n",
-    "        # initialize the weights\n",
-    "        w_init = tf.random_normal_initializer()\n",
-    "        # W should be half the size of the input\n",
-    "        w_init_val = w_init(shape=(int(input_shape[1] / 2), self.units), dtype='float32')\n",
+    "        # initialize the weights to be 1s\n",
+    "        w_init = tf.ones_initializer()\n",
+    "        # W should be half the size of the input and it should be a diagonal matrix and it should contain only 1s\n",
+    "        w_init_val = w_init(shape=(int(input_shape[1] / 2), int(input_shape[1] / 2)), dtype='float32')\n",
     "        self.w = tf.Variable(initial_value=w_init_val, trainable='true')\n",
     "\n",
     "    def call(self, inputs):\n",
@@ -998,21 +998,21 @@
     "        U = inputs[:, :int(inputs.shape[1] / 2)]\n",
     "        # Take the second half of the input which is V:\n",
     "        V = inputs[:, int(inputs.shape[1] / 2):]\n",
-    "        # Transpose V\n",
-    "        V = tf.transpose(V)\n",
-    "        # Compute the dot product of U and V and the weights w\n",
-    "        UV = tf.matmul(U, V)\n",
-    "        WUV = tf.matmul(self.w, UV)\n",
+    "        # W should be half the size of the input and it should be a diagonal matrix\n",
+    "        # Compute the dot product of U and V and the weights w, which is the numerator of the cosine similarity\n",
+    "        WUV = tf.matmul(U, tf.matmul(self.w, tf.transpose(V)))\n",
     "        # Square U and V\n",
     "        U_squared = tf.square(U)\n",
     "        V_squared = tf.square(V)\n",
     "        # Compute the dot product of U_squared and V_squared with the weights w\n",
     "        WU_squared = tf.matmul(U_squared, self.w)\n",
-    "        WV_squared = tf.matmul(tf.transpose(V_squared), self.w)\n",
+    "        WV_squared = tf.matmul(V_squared, self.w)\n",
     "        # take the root of the sum of squares of WUV, WU_squared and WV_squared\n",
     "        WU_squared_root = tf.sqrt(WU_squared)\n",
     "        WV_squared_root = tf.sqrt(WV_squared)\n",
-    "        denominator = WU_squared_root * WV_squared_root\n",
+    "\n",
+    "        denominator = tf.matmul(WU_squared_root, tf.transpose(WV_squared_root))\n",
+    "\n",
     "        # divide WUV by the denominator\n",
     "        WUV_div_denominator = WUV / denominator\n",
     "        return self.activation(WUV_div_denominator)\n",
@@ -1021,20 +1021,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-02T13:06:55.964406200Z",
-     "start_time": "2023-06-02T13:06:55.919542100Z"
+     "end_time": "2023-06-02T13:51:09.187980700Z",
+     "start_time": "2023-06-02T13:51:09.160023800Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 398,
    "outputs": [
     {
      "data": {
       "text/plain": "(405120, 1536)"
      },
-     "execution_count": 321,
+     "execution_count": 398,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,33 +1045,32 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-02T13:06:56.277089900Z",
-     "start_time": "2023-06-02T13:06:56.262098800Z"
+     "end_time": "2023-06-02T13:51:09.448401100Z",
+     "start_time": "2023-06-02T13:51:09.307053900Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 405,
    "outputs": [],
    "source": [
-    "\n",
     "model_cos = tf.keras.models.Sequential([\n",
-    "    WeightedCos(128, activation='relu'),\n",
+    "    WeightedCos(128),\n",
     "    tf.keras.layers.Dense(1, activation='sigmoid')\n",
     "])\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-02T13:06:56.500251500Z",
-     "start_time": "2023-06-02T13:06:56.457319Z"
+     "end_time": "2023-06-02T13:53:30.301166100Z",
+     "start_time": "2023-06-02T13:53:30.271864500Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 406,
    "outputs": [],
    "source": [
     "model_cos.compile(loss='binary_crossentropy', optimizer='adam', metrics=[metrics.TruePositives(name='tp'),\n",
@@ -1087,39 +1086,26 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-02T13:06:56.717761300Z",
-     "start_time": "2023-06-02T13:06:56.636493400Z"
+     "end_time": "2023-06-02T13:53:30.880395700Z",
+     "start_time": "2023-06-02T13:53:30.823618800Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": null,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "in user code:\n\n    File \"C:\\DTU - KID\\4. Semester\\Bachelor projekt AI\\KODE\\ChatGPT_Tutor_Project\\venv\\lib\\site-packages\\keras\\engine\\training.py\", line 1284, in train_function  *\n        return step_function(self, iterator)\n    File \"C:\\DTU - KID\\4. Semester\\Bachelor projekt AI\\KODE\\ChatGPT_Tutor_Project\\venv\\lib\\site-packages\\keras\\engine\\training.py\", line 1268, in step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    File \"C:\\DTU - KID\\4. Semester\\Bachelor projekt AI\\KODE\\ChatGPT_Tutor_Project\\venv\\lib\\site-packages\\keras\\engine\\training.py\", line 1249, in run_step  **\n        outputs = model.train_step(data)\n    File \"C:\\DTU - KID\\4. Semester\\Bachelor projekt AI\\KODE\\ChatGPT_Tutor_Project\\venv\\lib\\site-packages\\keras\\engine\\training.py\", line 1050, in train_step\n        y_pred = self(x, training=True)\n    File \"C:\\DTU - KID\\4. Semester\\Bachelor projekt AI\\KODE\\ChatGPT_Tutor_Project\\venv\\lib\\site-packages\\keras\\utils\\traceback_utils.py\", line 70, in error_handler\n        raise e.with_traceback(filtered_tb) from None\n    File \"C:\\Users\\anton\\AppData\\Local\\Temp\\__autograph_generated_filep9dnufdm.py\", line 23, in tf__call\n        WUV_div_denominator = ag__.ld(WUV) / ag__.ld(denominator)\n\n    ValueError: Exception encountered when calling layer 'weighted_cos_25' (type WeightedCos).\n    \n    in user code:\n    \n        File \"C:\\Users\\anton\\AppData\\Local\\Temp\\ipykernel_37240\\3474709486.py\", line 43, in call  *\n            WUV_div_denominator = WUV / denominator\n    \n        ValueError: Dimensions must be equal, but are 768 and 128 for '{{node sequential_32/weighted_cos_25/truediv}} = RealDiv[T=DT_FLOAT](sequential_32/weighted_cos_25/MatMul_1, sequential_32/weighted_cos_25/mul)' with input shapes: [768,128], [128,128].\n    \n    \n    Call arguments received by layer 'weighted_cos_25' (type WeightedCos):\n      • inputs=tf.Tensor(shape=(128, 1536), dtype=float32)\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[324], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m baseline_history_cos \u001B[38;5;241m=\u001B[39m \u001B[43mmodel_cos\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfit\u001B[49m\u001B[43m(\u001B[49m\u001B[43mX_train\u001B[49m\u001B[43m[\u001B[49m\u001B[43m:\u001B[49m\u001B[38;5;241;43m256\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43my_train\u001B[49m\u001B[43m[\u001B[49m\u001B[43m:\u001B[49m\u001B[38;5;241;43m256\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m      2\u001B[0m \u001B[43m          \u001B[49m\u001B[43mbatch_size\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m128\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[0;32m      3\u001B[0m \u001B[43m          \u001B[49m\u001B[43mepochs\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m10\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[0;32m      4\u001B[0m \u001B[43m          \u001B[49m\u001B[43mverbose\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[0;32m      5\u001B[0m \u001B[43m          \u001B[49m\u001B[43mvalidation_data\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mX_test\u001B[49m\u001B[43m[\u001B[49m\u001B[43m:\u001B[49m\u001B[38;5;241;43m256\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43my_test\u001B[49m\u001B[43m[\u001B[49m\u001B[43m:\u001B[49m\u001B[38;5;241;43m256\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32mC:\\DTU - KID\\4. Semester\\Bachelor projekt AI\\KODE\\ChatGPT_Tutor_Project\\venv\\lib\\site-packages\\keras\\utils\\traceback_utils.py:70\u001B[0m, in \u001B[0;36mfilter_traceback.<locals>.error_handler\u001B[1;34m(*args, **kwargs)\u001B[0m\n\u001B[0;32m     67\u001B[0m     filtered_tb \u001B[38;5;241m=\u001B[39m _process_traceback_frames(e\u001B[38;5;241m.\u001B[39m__traceback__)\n\u001B[0;32m     68\u001B[0m     \u001B[38;5;66;03m# To get the full stack trace, call:\u001B[39;00m\n\u001B[0;32m     69\u001B[0m     \u001B[38;5;66;03m# `tf.debugging.disable_traceback_filtering()`\u001B[39;00m\n\u001B[1;32m---> 70\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m e\u001B[38;5;241m.\u001B[39mwith_traceback(filtered_tb) \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;28mNone\u001B[39m\n\u001B[0;32m     71\u001B[0m \u001B[38;5;28;01mfinally\u001B[39;00m:\n\u001B[0;32m     72\u001B[0m     \u001B[38;5;28;01mdel\u001B[39;00m filtered_tb\n",
-      "File \u001B[1;32m~\\AppData\\Local\\Temp\\__autograph_generated_fileszxcjowo.py:15\u001B[0m, in \u001B[0;36mouter_factory.<locals>.inner_factory.<locals>.tf__train_function\u001B[1;34m(iterator)\u001B[0m\n\u001B[0;32m     13\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m     14\u001B[0m     do_return \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;01mTrue\u001B[39;00m\n\u001B[1;32m---> 15\u001B[0m     retval_ \u001B[38;5;241m=\u001B[39m ag__\u001B[38;5;241m.\u001B[39mconverted_call(ag__\u001B[38;5;241m.\u001B[39mld(step_function), (ag__\u001B[38;5;241m.\u001B[39mld(\u001B[38;5;28mself\u001B[39m), ag__\u001B[38;5;241m.\u001B[39mld(iterator)), \u001B[38;5;28;01mNone\u001B[39;00m, fscope)\n\u001B[0;32m     16\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m:\n\u001B[0;32m     17\u001B[0m     do_return \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;01mFalse\u001B[39;00m\n",
-      "File \u001B[1;32m~\\AppData\\Local\\Temp\\__autograph_generated_filep9dnufdm.py:23\u001B[0m, in \u001B[0;36mouter_factory.<locals>.inner_factory.<locals>.tf__call\u001B[1;34m(self, inputs)\u001B[0m\n\u001B[0;32m     21\u001B[0m WV_squared_root \u001B[38;5;241m=\u001B[39m ag__\u001B[38;5;241m.\u001B[39mconverted_call(ag__\u001B[38;5;241m.\u001B[39mld(tf)\u001B[38;5;241m.\u001B[39msqrt, (ag__\u001B[38;5;241m.\u001B[39mld(WV_squared),), \u001B[38;5;28;01mNone\u001B[39;00m, fscope)\n\u001B[0;32m     22\u001B[0m denominator \u001B[38;5;241m=\u001B[39m ag__\u001B[38;5;241m.\u001B[39mld(WU_squared_root) \u001B[38;5;241m*\u001B[39m ag__\u001B[38;5;241m.\u001B[39mld(WV_squared_root)\n\u001B[1;32m---> 23\u001B[0m WUV_div_denominator \u001B[38;5;241m=\u001B[39m \u001B[43mag__\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mld\u001B[49m\u001B[43m(\u001B[49m\u001B[43mWUV\u001B[49m\u001B[43m)\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m/\u001B[39;49m\u001B[43m \u001B[49m\u001B[43mag__\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mld\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdenominator\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     24\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m     25\u001B[0m     do_return \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;01mTrue\u001B[39;00m\n",
-      "\u001B[1;31mValueError\u001B[0m: in user code:\n\n    File \"C:\\DTU - KID\\4. Semester\\Bachelor projekt AI\\KODE\\ChatGPT_Tutor_Project\\venv\\lib\\site-packages\\keras\\engine\\training.py\", line 1284, in train_function  *\n        return step_function(self, iterator)\n    File \"C:\\DTU - KID\\4. Semester\\Bachelor projekt AI\\KODE\\ChatGPT_Tutor_Project\\venv\\lib\\site-packages\\keras\\engine\\training.py\", line 1268, in step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    File \"C:\\DTU - KID\\4. Semester\\Bachelor projekt AI\\KODE\\ChatGPT_Tutor_Project\\venv\\lib\\site-packages\\keras\\engine\\training.py\", line 1249, in run_step  **\n        outputs = model.train_step(data)\n    File \"C:\\DTU - KID\\4. Semester\\Bachelor projekt AI\\KODE\\ChatGPT_Tutor_Project\\venv\\lib\\site-packages\\keras\\engine\\training.py\", line 1050, in train_step\n        y_pred = self(x, training=True)\n    File \"C:\\DTU - KID\\4. Semester\\Bachelor projekt AI\\KODE\\ChatGPT_Tutor_Project\\venv\\lib\\site-packages\\keras\\utils\\traceback_utils.py\", line 70, in error_handler\n        raise e.with_traceback(filtered_tb) from None\n    File \"C:\\Users\\anton\\AppData\\Local\\Temp\\__autograph_generated_filep9dnufdm.py\", line 23, in tf__call\n        WUV_div_denominator = ag__.ld(WUV) / ag__.ld(denominator)\n\n    ValueError: Exception encountered when calling layer 'weighted_cos_25' (type WeightedCos).\n    \n    in user code:\n    \n        File \"C:\\Users\\anton\\AppData\\Local\\Temp\\ipykernel_37240\\3474709486.py\", line 43, in call  *\n            WUV_div_denominator = WUV / denominator\n    \n        ValueError: Dimensions must be equal, but are 768 and 128 for '{{node sequential_32/weighted_cos_25/truediv}} = RealDiv[T=DT_FLOAT](sequential_32/weighted_cos_25/MatMul_1, sequential_32/weighted_cos_25/mul)' with input shapes: [768,128], [128,128].\n    \n    \n    Call arguments received by layer 'weighted_cos_25' (type WeightedCos):\n      • inputs=tf.Tensor(shape=(128, 1536), dtype=float32)\n"
+      "Epoch 1/10\n",
+      "1797/6291 [=======>......................] - ETA: 6:23 - loss: 0.7144 - tp: 46659.0000 - fp: 46532.0000 - tn: 68405.0000 - fn: 68420.0000 - accuracy: 0.5002 - precision: 0.5007 - recall: 0.4055 - auc: 0.5018 - prc: 0.5022"
      ]
     }
    ],
    "source": [
-    "baseline_history_cos = model_cos.fit(X_train[:256], y_train[:256],\n",
+    "baseline_history_cos = model_cos.fit(X_train_resample, y_train_resample,\n",
     "          batch_size=128,\n",
     "          epochs=10,\n",
     "          verbose=1,\n",
@@ -1127,9 +1113,9 @@
    ],
    "metadata": {
     "collapsed": false,
+    "is_executing": true,
     "ExecuteTime": {
-     "end_time": "2023-06-02T13:06:57.203302700Z",
-     "start_time": "2023-06-02T13:06:56.841876100Z"
+     "start_time": "2023-06-02T13:54:36.205640800Z"
     }
    }
   },
@@ -1145,28 +1131,10 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-06-02T13:04:26.162020300Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 309,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-02T13:04:26.542004400Z",
-     "start_time": "2023-06-02T13:04:26.409359700Z"
-    }
+    "collapsed": false
    }
   },
   {
