Small changes to parameters

--- a/Similarity network.ipynb
+++ b/Similarity network.ipynb
@@ -1254,7 +1254,7 @@
     "import keras\n",
     "early_stopping = keras.callbacks.EarlyStopping(\n",
     "    monitor='val_loss',\n",
-    "    patience=15,\n",
+    "    patience=25,\n",
     "    restore_best_weights=True)"
    ],
    "metadata": {
@@ -1931,8 +1931,8 @@
    "execution_count": 172,
    "outputs": [],
    "source": [
-    "model_cos.compile(loss=tf.keras.losses.MeanSquaredError(),\n",
-    "        optimizer=tf.keras.optimizers.Adam(0.001, clipnorm=1.),\n",
+    "model_cos.compile(loss=tf.keras.losses.BinaryCrossentropy(),\n",
+    "        optimizer=tf.keras.optimizers.Adam(),\n",
     "        metrics=[metrics.TruePositives(name='tp'),\n",
     "      metrics.FalsePositives(name='fp'),\n",
     "      metrics.TrueNegatives(name='tn'),\n",
